name:                mpegts-hs
version:             0.1.0.0
synopsis:            MpegTS Parser
description:         Please see README.md
homepage:            http://github.com/kevinkirkup/mpegts-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Kevin S Kirkup
maintainer:          kevin.kirkup@gmail.com
copyright:           (c) 2015 Kevin S Kirkup
category:            Video
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Media.MpegTs.Packet,
                       Media.MpegTs.AdaptationField
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , binary-strict
                     , bytestring
  default-language:    Haskell2010

executable mpegts-hs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mpegts-hs
                     , text-format-simple
                     , optparse-applicative
                     , bytestring
  default-language:    Haskell2010

test-suite mpegts-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mpegts-hs
                     , HUnit
                     , hspec
                     , QuickCheck
                     , binary
                     , binary-strict
                     , bytestring
  other-modules:     Media.MpegTs.AdaptationFieldSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kevinkirkup/mpegts-hs
